fix visibilty issues + chart display for edu-xp

--- a/assets/styles/edu-xp.css
+++ b/assets/styles/edu-xp.css
@@ -69,7 +69,7 @@
   text-transform: capitalize;
 }
 p.text-edu-info {
-  color: #737373;
+  color: #323232;
   font-family: 'Raleway', sans-serif;
   font-size: 15px;
   margin-bottom: 20px; /* apply margin that has been resetted */
